# codecrafters-docker-c

./: CMakeLists.txt  README.md
app/: file_ops.c  file_ops.h  logger.c  logger.h  main.c  registry_ops.c  registry_ops.h
